[package]
authors = [
  "Tsiry Sandratraina <tsiry.sndr@fluentci.io>",
]
description = "Blazing fast deployer and server automation tool"
edition = "2021"
license = "MIT"
name = "mina"
version = "0.1.0"

[lib]
crate-type = [
  "cdylib",
]

[dependencies]
anyhow = "1.0.82"
extism-pdk = "1.1.0"
fluentci-pdk = "0.1.9"
